force-app/main/default/objects/L_PR_Idea_Organisation__c/L_PR_Idea_Organisation__c.object-meta.xml
<CustomObject>
    <description>Junction object to capture relationship between Lead/Idea and Organisations</description>
    <label>Lead Organisation</label>
    <nameField>
        <displayFormat>IO-{000000}</displayFormat>
        <label>PRM Lead Organisation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Organisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>