force-app/main/default/objects/L_PR_Idea_Organisation__c/fields/L_PR_IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>L_PR_IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPrimary</label>
    <type>Checkbox</type>
</CustomField>