force-app/main/default/objects/L_PR_Idea_Organisation__c/fields/L_PR_LeadStatus__c.field-meta.xml
<CustomField>
    <fullName>L_PR_LeadStatus__c</fullName>
    <label>Lead Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>