force-app/main/default/objects/L_PR_Idea_Organisation__c/fields/L_PR_Organisation__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Organisation__c</fullName>
    <label>Organisation</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <errorMessage>You can only select External Organisation, Educational Institution or La Trobe Organisation Unit</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>La Trobe Organisation Unit</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>External Organisation</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Educational Institution</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lead Organisations</relationshipLabel>
    <relationshipName>Idea_Organisations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>