force-app/main/default/objects/L_PR_Idea_Organisation__c/fields/L_PR_Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Organisation_Type__c</fullName>
    <formula>L_PR_Organisation__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation Type</label>
    <type>Text</type>
</CustomField>