force-app/main/default/objects/L_PR_Idea_Organisation__c/validationRules/Restrict_Closed_Lead_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Closed_Lead_Relationship</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(L_PR_Idea__r.L_PR_Lead_Status__c , &apos;Closed&apos;) || ISPICKVAL(L_PR_Idea__r.L_PR_Lead_Status__c , &apos;Closed – Converted&apos;)) &amp;&amp; NOT( ISCHANGED( L_PR_LeadStatus__c ) )</errorConditionFormula>
    <errorMessage>Cannot link Organisation to Closed Lead</errorMessage>
</ValidationRule>